<resources>
    <string name="app_name">Tajrobt ta3arof</string>
    <string name="ok">Ok</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="sign_in_or_sign_up">Sign In Or Sign Up</string>
    <string name="home">Home</string>
    <string name="please_wait">Please Wait</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="gues">Continue as a guest</string>
    <string name="terms">Terms and condition</string>
    <string name="Name">Full Name</string>
    <string name="lastName">Last Name</string>
    <string name="Mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="kindly_enter_first_name">Kindly Enter Name</string>
    <string name="kindly_enter_last_name">Kindly Enter Last Name</string>
    <string name="kindly_enter_mobile">Kindly Enter Mobile</string>
    <string name="kindly_enter_dob">Kindly enter Date of Birth</string>
    <string name="kindly_enter_confirm">Kindly Enter Confirm Password</string>
    <string name="kindly_select_terms">Kindly Select Terms and Condition</string>
    <string name="kindly_enter_password">Kindly Enter Password</string>
    <string name="terms_and_condition">Accept Terms and Condition and the details must be as per the Civil Id</string>
    <string name="info_txt">The details must be as per the Civil Id</string>
    <string name="have_you">Have an account?</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thr">Thr</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="map_key">AIzaSyCdx6WXfM9JgEU7yrOmPpdBQKQJ-x8Maeg</string>
    <string name="place_api">AIzaSyAusRdpcmkauwfOMViSj2wbcKYmQQjTDyM</string>
    <string name="app_arabic">تجربة تعارف</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="about_">About</string>
    <string name="terms___and_condition">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tips">Tips</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender_">Gender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="location">Location</string>
    <string name="take_my_location">Take My Location</string>
    <string name="select">Select</string>
    <string name="maximum_distance">Maximum distance</string>
    <string name="global">Global</string>
    <string name="thank_you_for_signing_up">Thank You For Signing Up</string>
    <string name="the_global_mode_turns_on_as_soon_as_the_profiles_in_this_location_run_out">The global mode turns on as soon as the profiles in this location run out.</string>
    <string name="age_range">Age Range</string>
    <string name="start_searching">Start Searching</string>
    <string name="age_rangee">Age Range</string>
    <string name="interestt">Interest</string>
    <string name="ethic">Ethic</string>
    <string name="education">Education</string>
    <string name="selectt">Select</string>
    <string name="friends_you_are_looking_for">Friends you are looking for</string>
    <string name="continue_">Continue</string>
    <string name="create_account">Create Account</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="email_address_">Email address</string>
    <string name="password">Password</string>
    <string name="log_in_">Log In</string>
    <string name="or">OR</string>
    <string name="about_you">About You</string>
    <string name="its_recommended_to_add_a_real_picture_of_your_face_or_a_part_of_it">its recommended to add a real picture of your face or a part of it</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="min_150">Min 50</string>
    <string name="sign_up">Sign Up</string>
    <string name="characters_should_be_less_than">characters should be less than 50</string>
    <string name="best_matches">Best Matches</string>
    <string name="i_am_corporate_lawyer_at_goliath_national_bank_i_grown_up_in_minnesota_i_love_and_care_and_confident_and_extremely_emotional_which_i_often_gets_teased_for_by_the_gang_i_am_very_passionate_about_what_i_do_and_care_deeply_for_my_family_and_friends">I am corporate lawyer at Goliath National Bank. I grown up in Minnesota. I love and care and confident and extremely emotional, which I often gets teased for by the gang. I am very passionate about what I do, and care deeply for my family and friends.</string>
    <string name="change_search">Change Search</string>
    <string name="next">Next</string>
    <string name="intro_1">The first acquaintance application built on scientific frameworks and realistic experiences</string>
    <string name="intro2">The first acquaintance application built on scientific frameworks and realistic experiences</string>
    <string name="intro1_head">Stay Connected\n</string>
    <string name="intro1_head_part2">With Your Friends!</string>
    <string name="intro_2_head">Share Media With\n</string>
    <string name="intro2_headpart2">Each other</string>
    <string name="my_friends">My Friends</string>
    <string name="request">Request</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="set_image">Set image</string>
    <string name="take_image">Take a image</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_video">Take a video</string>
    <string name="set_image_or_video">Set image / Video</string>
    <string name="kindly_choose_any_profile_pic">kindly choose any profile pic</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_want_to_delete_account">Are you sure you want to Delete Account </string>
    <string name="your_account_will_be_deleted">Your Account will be Deleted </string>
    <string name="take_a_picture">Take a picture</string>
    <string name="record_a_video">Record a Video</string>
    <string name="Api_data_not_found">Api data not found</string>
    <string name="image_picker_option_is_missing">Image picker option is missing</string>
    <string name="sorry_your_camera_does_not_support">Sorry! Your device doesn\'t support camera</string>
    <string name="kindly_capture_some_media">Kindly Capture some media</string>
    <string name="user_cancelled_image_capture">User cancelled image capture</string>
    <string name="sorry_failed_to_capture">Sorry! Failed to capture image</string>
    <string name="user_cancelled_video_recording">User cancelled video recording</string>
    <string name="sorry_failed_to_record_video">Sorry! Failed to record video</string>
    <string name="permission_required">Permissions required!</string>
    <string name="camera_needs_few_permisson">Camera needs few permissions to work properly. Grant them in settings.</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="select_video_from_gallery">select video from gallery</string>
    <string name="user_login_failed">User Login Failed</string>
    <string name="kindly_select_interest">Kindly Select Interest</string>
    <string name="friend_request">Friend request</string>
    <string name="no_friend_request">no friend request</string>
    <string name="no_friends">no friends</string>
    <string name="no_chats">no chats</string>
    <string name="no_tips">no tips</string>
    <string name="no_privacy_policy">no privacy policy</string>
    <string name="no_terms_and_condition">no terms and condition</string>
    <string name="home_screen_chat_messege">You will be able to chat with this user if they accept your request after you\'ve sent it.</string>
    <string name="interest_optional">Interest (Optional)</string>
    <string name="ethic_optional">Ethic (Optional)</string>
    <string name="education_optional">Education (Optional)</string>
    <string name="kindly_enter_your_name">kindly enter your name</string>
    <string name="kindly_select_date_of_birth">kindly enter your Date of Birth</string>
    <string name="kindly_enter_your_Date_of_Month">kindly enter your Date of Month</string>
    <string name="date_of_year">kindly enter your Date of Year</string>
    <string name="select_your_country">kindly select your country</string>
    <string name="kindlyenter_your_ethnicity">kindly enter your Ethnicity</string>
    <string name="kindly_enter_your_mobile_number">kindly enter your mobile number</string>
    <string name="kindly_enter_email">kindly enter email</string>
    <string name="kindly_enter_passwords">kindly enter your Password</string>
    <string name="kindlt_enterr_confirm_password">kindly enter your Confirm Password</string>
    <string name="kindly_tell_me_about_u">kindly tell us about you</string>
    <string name="kindly_select_education">kindly select education</string>
    <string name="select_age">Select Age</string>
    <string name="no_user_exist">no user exist</string>
    <string name="my_posted_images">My Posted Images</string>
    <string name="no_images">no Images</string>
    <string name="sure_you_want_to_delete_this_image">Are You Sure want to Delete This Image</string>
    <string name="delete_image_successfully">delete image Successfully</string>
    <string name="delete_image">delete Image</string>
    <string name="are_you_sure_want_to_unfriend">Are you sure want to unfriend your friend</string>
    <string name="main_profile_photo">Main Profile Photo</string>
    <string name="edit">edit</string>
    <string name="other_images">Other Images</string>
    <string name="add_multiple_images">Add Multiple Images</string>
    <string name="kindly_enter_your_date_of_month">kindly enter your Date of Month</string>
    <string name="kindly_enter_your_date_of_year">kindly enter your date of year</string>
    <string name="kindly_select_your_country">kindly select your country</string>
    <string name="kindly_select_gender">kindly select Gender</string>
    <string name="kindly_select_mobile_country_code">kindly select mobile country code</string>
    <string name="select_multiiple_images">"Select Multiple Images "</string>
    <string name="report">Report</string>
    <string name="select_reason">Select Reason</string>
    <string name="bad_behave">bad behave</string>
    <string name="description_for_report">Description for report</string>
    <string name="submit_report">Submit Report</string>
    <string name="describe_reason">describe reason</string>
</resources>