<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/backImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_back_arrow"></ImageView>

        <TextView
            android:id="@+id/tittleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_Heading"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_name"
            android:paddingHorizontal="10dp"></TextView>


        <EditText
            android:id="@+id/userNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_white_grey_border"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:hint=" eg:Monica Geller"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"></EditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-30dp"
            android:hint="@string/date_of_birth"
            android:paddingHorizontal="10dp"></TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingHorizontal="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_white"
                android:elevation="10dp"
                android:gravity="center"
                android:hint="@string/date"
                android:inputType="number"

                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal"></EditText>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_white"

                android:elevation="10dp"
                android:gravity="center"
                android:hint="Month"

                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal"></EditText>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_white"
                android:elevation="10dp"
                android:gravity="center"
                android:hint="@string/year"

                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal"></EditText>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="-10dp"
            android:hint="@string/choose_your_country"
            android:paddingHorizontal="10dp"></TextView>


        <EditText
            android:id="@+id/selectCountryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_white_grey_border"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_down"
            android:elevation="10dp"
            android:hint="Kuwait"
            android:padding="10dp"
            android:paddingHorizontal="10dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-30dp"
            android:hint="@string/gender_"
            android:paddingHorizontal="10dp"></TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_rectangle_white"
                android:elevation="10dp"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="100dp"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_rectangle_white"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="10dp"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="100dp"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"></TextView>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="-10dp"
            android:hint="@string/ethnicity"
            android:paddingHorizontal="10dp"></TextView>


        <EditText
            android:id="@+id/ethnicityyET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rectangle_white_grey_border"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:hint="Arab"
            android:padding="10dp"
            android:paddingHorizontal="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="30dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:paddingHorizontal="10dp"></TextView>


        <EditText
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_white_grey_border"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:hint="**********"
            android:padding="10dp"
            android:paddingHorizontal="10dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:paddingHorizontal="10dp"></TextView>


        <EditText
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_white_grey_border"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:hint="**********"
            android:padding="10dp"
            android:paddingHorizontal="10dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"></LinearLayout>

        <TextView
            android:id="@+id/continueTxt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rectangle_white_grey_border"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/continue_"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"></LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>



