<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_back_arrow"
                android:id="@+id/backImg"
                android:layout_height="wrap_content"></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/text_size_Heading"
                android:paddingHorizontal="20dp"
                android:id="@+id/tittleTxt"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/about"></TextView>

            <LinearLayout
                android:id="@+id/termsLL"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_white_grey_border"
                android:backgroundTint="@color/grey_light"
                android:orientation="horizontal"
                android:padding="10dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_weight="1"
                    android:text="@string/terms___and_condition"
                    android:textColor="@color/black"></TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:src="@drawable/ic_go_arrow"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/policyLL"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_white_grey_border"
                android:backgroundTint="@color/grey_light"
                android:orientation="horizontal"
                android:padding="10dp">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="@dimen/text_size_normal"

                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"></TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:src="@drawable/ic_go_arrow"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tipsLL"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_white_grey_border"
                android:backgroundTint="@color/grey_light"
                android:orientation="horizontal"
                android:padding="10dp">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_normal"

                    android:text="@string/tips"
                    android:textColor="@color/black"></TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:src="@drawable/ic_go_arrow"></ImageView>
            </LinearLayout>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

 </RelativeLayout>